Fixed viewport issue on small screen devices

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ input[type="text"]:focus {
   align-items: center;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 850px) {
   body, html {
     height: 100%;
   }
